{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 102,
  "lineage": "39015e13-d8ae-5c62-0fc9-c425cb6ff41f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:security-group/sg-0d922880c61a93e65",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d922880c61a93e65",
            "ingress": [],
            "name": "nova-eks-terraform-cluster-20231223091014474700000002",
            "name_prefix": "nova-eks-terraform-cluster-",
            "owner_id": "059012766390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nova-eks-terraform-cluster"
            },
            "tags_all": {
              "Name": "nova-eks-terraform-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:security-group/sg-09c70af9e8901d20d",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-09c70af9e8901d20d",
            "ingress": [],
            "name": "nova-eks-terraform-node-20231223091014484500000003",
            "name_prefix": "nova-eks-terraform-node-",
            "owner_id": "059012766390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nova-eks-terraform-node",
              "kubernetes.io/cluster/nova-eks-terraform": "owned"
            },
            "tags_all": {
              "Name": "nova-eks-terraform-node",
              "kubernetes.io/cluster/nova-eks-terraform": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-866845444",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d922880c61a93e65",
            "security_group_rule_id": "sgr-0b21f293e4464e328",
            "self": false,
            "source_security_group_id": "sg-09c70af9e8901d20d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4244845034",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-0e9d9a230d2fb5fea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3742172350",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-0c2bfb58133d51f26",
            "self": false,
            "source_security_group_id": "sg-0d922880c61a93e65",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3153569308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-0fb09dfd5a3788dd2",
            "self": false,
            "source_security_group_id": "sg-0d922880c61a93e65",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1924514186",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-032bd3ee523aa033c",
            "self": false,
            "source_security_group_id": "sg-0d922880c61a93e65",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1642724779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-0816d6e39a24b2a6e",
            "self": false,
            "source_security_group_id": "sg-0d922880c61a93e65",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-88657504",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-0bc3b7cf184bcf6d4",
            "self": false,
            "source_security_group_id": "sg-0d922880c61a93e65",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2759330247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-0f31be95aa6311bf9",
            "self": false,
            "source_security_group_id": "sg-0d922880c61a93e65",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1721462123",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-0216a70c8198c5bbf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-919558250",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-070a93706a861647b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2458975109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09c70af9e8901d20d",
            "security_group_rule_id": "sgr-0dfc88aa18e34454c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:network-acl/acl-0020fa973a2e8a478",
            "default_network_acl_id": "acl-0020fa973a2e8a478",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0020fa973a2e8a478",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "059012766390",
            "subnet_ids": [
              "subnet-02948f560f79d2846",
              "subnet-059c33af9c7188c03",
              "subnet-073be34f9e8acb2da",
              "subnet-0ad9971921b4df77b",
              "subnet-0df2b7d31c049d26c",
              "subnet-0efef8fef358d05b3"
            ],
            "tags": {
              "Name": "terrform-nova-test-vpc-default"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-default"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:route-table/rtb-0b71b93e8040abf1d",
            "default_route_table_id": "rtb-0b71b93e8040abf1d",
            "id": "rtb-0b71b93e8040abf1d",
            "owner_id": "059012766390",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terrform-nova-test-vpc-default"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:security-group/sg-0da8b3f1c6c5bf7c7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0da8b3f1c6c5bf7c7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "059012766390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terrform-nova-test-vpc-default"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-default"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b3b99ceca5393f6",
            "association_id": "eipassoc-0b16c03f67a2b9bb0",
            "domain": "vpc",
            "id": "eipalloc-03b3b99ceca5393f6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ab7e1eaac84270fb",
            "private_dns": "ip-10-0-4-66.ec2.internal",
            "private_ip": "10.0.4.66",
            "public_dns": "ec2-3-232-106-215.compute-1.amazonaws.com",
            "public_ip": "3.232.106.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terrform-nova-test-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:internet-gateway/igw-0e6d65981d4aa0237",
            "id": "igw-0e6d65981d4aa0237",
            "owner_id": "059012766390",
            "tags": {
              "Name": "terrform-nova-test-vpc"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b3b99ceca5393f6",
            "association_id": "eipassoc-0b16c03f67a2b9bb0",
            "connectivity_type": "public",
            "id": "nat-01dddfcbcf4a0123f",
            "network_interface_id": "eni-0ab7e1eaac84270fb",
            "private_ip": "10.0.4.66",
            "public_ip": "3.232.106.215",
            "subnet_id": "subnet-0efef8fef358d05b3",
            "tags": {
              "Name": "terrform-nova-test-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eb7d7ff0a78918f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01dddfcbcf4a0123f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb7d7ff0a78918f4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e6d65981d4aa0237",
            "id": "r-rtb-0d203b395111df5141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d203b395111df514",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:route-table/rtb-0eb7d7ff0a78918f4",
            "id": "rtb-0eb7d7ff0a78918f4",
            "owner_id": "059012766390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01dddfcbcf4a0123f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terrform-nova-test-vpc-private"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:route-table/rtb-0d203b395111df514",
            "id": "rtb-0d203b395111df514",
            "owner_id": "059012766390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6d65981d4aa0237",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terrform-nova-test-vpc-public"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02410065665cb9f5b",
            "route_table_id": "rtb-0eb7d7ff0a78918f4",
            "subnet_id": "subnet-073be34f9e8acb2da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f603da3541a48aca",
            "route_table_id": "rtb-0eb7d7ff0a78918f4",
            "subnet_id": "subnet-02948f560f79d2846"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0608f799e558e6794",
            "route_table_id": "rtb-0eb7d7ff0a78918f4",
            "subnet_id": "subnet-059c33af9c7188c03"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b0c2014020f1f03",
            "route_table_id": "rtb-0d203b395111df514",
            "subnet_id": "subnet-0efef8fef358d05b3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acc1171fdda15d4f",
            "route_table_id": "rtb-0d203b395111df514",
            "subnet_id": "subnet-0df2b7d31c049d26c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017ac0adabb92c738",
            "route_table_id": "rtb-0d203b395111df514",
            "subnet_id": "subnet-0ad9971921b4df77b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:subnet/subnet-073be34f9e8acb2da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073be34f9e8acb2da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059012766390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrform-nova-test-vpc-private-us-east-1a",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-private-us-east-1a",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:subnet/subnet-02948f560f79d2846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02948f560f79d2846",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059012766390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrform-nova-test-vpc-private-us-east-1b",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-private-us-east-1b",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:subnet/subnet-059c33af9c7188c03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059c33af9c7188c03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059012766390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrform-nova-test-vpc-private-us-east-1c",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-private-us-east-1c",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:subnet/subnet-0efef8fef358d05b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efef8fef358d05b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059012766390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrform-nova-test-vpc-public-us-east-1a",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-public-us-east-1a",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:subnet/subnet-0df2b7d31c049d26c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df2b7d31c049d26c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059012766390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrform-nova-test-vpc-public-us-east-1b",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-public-us-east-1b",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:subnet/subnet-0ad9971921b4df77b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad9971921b4df77b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059012766390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrform-nova-test-vpc-public-us-east-1c",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc-public-us-east-1c",
              "kubernetes.io/cluster/nova-eks-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-056f77e5a63b48f22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059012766390:vpc/vpc-056f77e5a63b48f22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0020fa973a2e8a478",
            "default_route_table_id": "rtb-0b71b93e8040abf1d",
            "default_security_group_id": "sg-0da8b3f1c6c5bf7c7",
            "dhcp_options_id": "dopt-0b969cd5efa0b8400",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056f77e5a63b48f22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b71b93e8040abf1d",
            "owner_id": "059012766390",
            "tags": {
              "Name": "terrform-nova-test-vpc"
            },
            "tags_all": {
              "Name": "terrform-nova-test-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}